changed some logic in basic classes