@@ -98,9 +98,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <skip.surefire.tests>${skipTests}</skip.surefire.tests>
-                    <argLine>
-                 @{argLine}   --add-opens infectiontracer.ui/infectiontracer.ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                    </argLine>
                 </configuration>
             </plugin>
 
